making teacher login function and resolve conflict

--- a/config.env
+++ b/config.env
@@ -2,3 +2,4 @@ MONGODB_URI=mongodb+srv://bedoshakdofa:W2KEEguB1L8cqqsR@cluster0.huq206a.mongodb
 API_PORT=5000
 JWT_SECRET=i-love-coding-in-nodejs
 JWT_EXPIRE=90
+NODE_ENV=dev
