--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^10.0.0"
   }
 }
