--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --detectOpenHandles",
+    "test-dev": "jest --detectOpenHandles --watch",
+    "test": "jest",
     "dev": "nodemon app.js"
   },
   "engines": {
