--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --passWithNoTests --detectOpenHandles",
+    "test-dev": "jest --detectOpenHandles --watch",
+    "test": "jest",
     "dev": "nodemon app.js"
   },
   "engines": {
@@ -36,11 +37,14 @@
     "@babel/preset-env": "^7.25.4",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.0.1",
     "supertest": "^7.0.0"
   },
   "jest": {
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
-    }
+    },
+    "testTimeout": 20000,
+    "clearMocks": true
   }
 }
