--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.4",
+    "@types/nodemailer": "^6.4.16",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "mongodb-memory-server": "^10.0.1",
     "supertest": "^7.0.0"
   },
   "jest": {
